docs(phase20): record stopped Stage 3 attempt